# trades

./: .gitignore  README.md  README_long.ipynb  README_long.md  meson.build  setup.py  trades_dynesty.py  trades_dynesty_analysis.py  trades_emcee.py  trades_emcee_analysis.py  trades_ultranest.py
grid/: custom_grid_values.py  plot_utils.py  trades_grid_adhoc_MbMc.py  trades_grid_to_oc.py  trades_grid_to_oc_v0.2.py  trades_grid_to_oc_v0.7.py  trades_grid_to_oc_v0.8.py  trades_grid_to_oc_v0.9.py  trades_oc.py  trades_oc_gls.py
pytrades/: __init__.py  __version__.py  ancillary.py  chains_summary_plot.py  chains_summary_plot_old.py  confidence_intervals.py  confidence_intervals_in_test.py  constants.py  convergence.py  corner_plot.py  correlation_triangle_plot.py  createSimFiles.py  de.py  de_plot.py  derived_correlation_plot.py  evolution_pso_plot.py  fitted_correlation_plot.py  full_emcee_analysis.py  gelman_rubin.py  geweke.py  gls.py  orbit_prepare.py  physical_correlation_plot.py  plot_oc.py  plot_oc_full.py  plot_oc_time_veusz.py  plot_rv.py  plot_rv_phase_old.py  pyde.py  pytrades.py  pytradesgrid_to_ttv_level.py  pytradesgrid_to_ttv_level_mp.py  read_finalpar.py  read_temporary_best_pik-pso_results.py  single_hist.py  trades_K9_B14vsH10.py  trades_PyPolyChord.py  trades_adhoc_grid.py  trades_adhoc_grid_mp.py  trades_de2emcee.py  (+15 more)
pytrades/.ipynb_checkpoints/: evolution_pso_plot-checkpoint.py
pytrades/cheops/: compute_KRV_MP_grid.py  trades_grid_adhoc_MbMc.py  trades_grid_to_ttv_level.py  trades_oc_gls.py  trades_tess2cheops.py  tradesgrid_to_ttv_level.py
pytrades/old_donotuse/: orbit_prepare.py  plot_oc_time_veusz.py  plot_rv_phase_old.py  trades_emcee_DONOTUSE.py  trades_pso2emcee_DONOTUSE.py  trades_pymnest.py
pytrades/old_tests/: evolution_pso_plot.py  trades_adhoc_grid.py  trades_adhoc_grid_mp.py
pytrades/pytrades/: ancillary.py  derived_correlation_plot.py  evolution_pso_plot.py  gelman_rubin.py  read_chains_test.py  read_temporary_best_pik-pso_results.py  single_hist.py  trades_PyPolyChord.py  trades_emcee.py  trades_emcee_sqrte.py  trades_pso2emcee.py  trades_pymnest.py
pytrades/testing/: analyse_pymnest.py  mcmc2fitness.py  old_trades_emcee.py  trades_adhoc_grid_parallel.py  trades_deemcee.py  trades_pymnest_minimal.py  trades_testing.py
pytrades/tests/: test_walkers_init.ipynb  test_walkers_init.py  trades_oc_gls.py
qrcode/: TRADESgithub_qrcode.eps  TRADESgithub_qrcode_teal.eps
src/: .directory  .f2py_f2cmap  Makefile  Makefile_pytrades  PolyChord_driver.f90  bootstrap.f90  celestial_mechanics.f90  constants.f90  constants.mod  convert_type.f90  convert_type.mod  createSimFiles.py  custom_type.f90  custom_type.mod  custom_type.mod0  demc.f90  derived_parameters_mod.f90  driver.f90  eq_motion.f90  fitness_module.f90  gaussian.f90  gaussian.mod  gls_module.f90  grid.f90  grid_search.f90  init_trades.f90  lin_fit.f90  linear_ephem.f90  lm.f90  numerical_integrator.f90  ode_run.f90  opti_pso.f90  output_files.f90  parameters.f90  parameters_conversion.f90  pikaia.f90  pytrades_lib.f90  pytrades_lib_test.f90  radial_velocities.f90  random_trades.f90  (+17 more)
src/PolyChord/: ini.f90  (+15 more)
trades_example/: PolyChord_TOBEREMOVED.opt  arg.in  bodies.lst  configuration.yml  priors.in
(+60 files in other folders)
